2011-01-23  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: Again misunderstanding of url @

	* Fix: misunderstanding of url @

	* Release: 0.9.9

2011-01-22  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: ediff temp file problem.

2011-01-21  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: fsvn-blame-minor-mode destroy isearch overlay.

	* Fix: default-directory is wrong in browse mode confirmer.

	* Fix: respect to `dired-deletion-confirmer'

	* Add: `fsvn-blame-minor-mode-with-range' bind to nothing.

2011-01-16  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Add: easymenu (file-select)

	* Fix: Display symlink arrow.

2011-01-13  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: setting font lock keywords by `setq'

2011-01-03  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Add: Blame minor mode accept changings.

2010-12-31  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: a lot of commit buffer problem

2010-12-30  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Delete: Unsupport Emacs 22 officially.

2010-12-17  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Add: fsvn-vc-commit-non-query-message

2010-11-21  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Release: 0.9.8

2010-11-13  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Add: fsvn-vc-commit-non-query

2010-10-19  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Add: fsvn-browse-smart-move-this bound to `C-c C-b C-m'
	* Add: fsvn-browse-smart-copy-this bound to `C-c C-b C-c'

2010-10-13  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: @ stated filename.

	* Fix: speed up windows process.

2010-10-11  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: check unsaved buffer in interactive read

	* Change: message-edit-mode and file-select-mode can create multiple buffers.

	* Change: fsvn-flatten-command-args -> fsvn-command-args-canonicalize
